# koulu

./: .dockerignore  .env.example  .gitignore  .python-version  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  setup.sh  start.sh
.claude/: settings.json  settings.local.json
.claude/agents/: backend-dev.md  frontend-dev.md  test-engineer.md
.claude/skills/architecture/: SKILL.md
.claude/skills/bdd/: SKILL.md
.claude/skills/bug-report/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/create-phase-plan/: SKILL.md
.claude/skills/deploy-status/: SKILL.md
.claude/skills/document-work/: SKILL.md
.claude/skills/e2e-test/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/generate-ui-spec/: README.md  SKILL.md
.claude/skills/git-branch-clean/: SKILL.md
.claude/skills/implement-feature/: SKILL.md
.claude/skills/implement-phase-team/: SKILL.md
.claude/skills/merge-to-main/: SKILL.md
.claude/skills/mvp-status/: SKILL.md
.claude/skills/observability/: SKILL.md
.claude/skills/python/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/ui-design/: SKILL.md
.claude/skills/update-mvp-status/: SKILL.md
.claude/skills/write-e2e-tests/: SKILL.md
.claude/skills/write-feature-spec/: SKILL.md
.claude/skills/write-technical-design/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260205_1200_initial_identity_tables.py  20260205_1400_add_profile_fields.py  20260207_1000_create_communities.py  20260207_1010_create_categories.py  20260207_1020_create_community_members.py  20260207_1030_create_posts.py  20260207_1040_seed_default_categories.py  20260207_1500_create_classroom_courses.py  20260207_1600_create_classroom_modules_lessons.py  20260208_1000_create_comments.py  20260208_1010_create_reactions.py  66ce48aa6407_seed_default_categories.py  8295c6c51028_initial_schema.py  8782370332f4_add_course_level_requirements_table.py  a1b2c3d4e5f6_add_gamification_tables.py  c2cd28a5f95b_add_search_vectors_and_username_to_.py  d51610573516_add_progress_and_lesson_completions_.py  ffcae5cbe8b3_add_modules_and_lessons_tables.py
docs/: FEATURE_STATUS.md  MULTI_PROJECT_WORKFLOW.md  WORKFLOW.md  deploy.md
docs/Projects/: .gitkeep
docs/architecture/: CONTEXT_MAP.md
docs/bugs/: .gitkeep  BUG-001-test-infrastructure-failures.md  BUGS.md
docs/domain/: GLOSSARY.md
docs/features/classroom/: ALIGNMENT_VERIFICATION.md  UI_SPEC.md  classroom-implementation-phases.md  classroom-prd.md  classroom-tdd.md
docs/features/community/: ALIGNMENT_VERIFICATION.md  UI_SPEC.md  feed-frontend-phases.md  feed-implementation-phases.md  feed-prd.md  feed-tdd.md
docs/features/gamification/: ALIGNMENT_VERIFICATION.md  LEADERBOARDS_ALIGNMENT_VERIFICATION.md  UI_SPEC.md  leaderboards-implementation-phases.md  leaderboards-phase-1-tasks.md  leaderboards-prd.md  leaderboards-tdd.md  leaderboards-ui-spec.md  points-implementation-phases.md  points-phase-1-tasks.md  points-prd.md  points-tdd.md
docs/features/identity/: ALIGNMENT_VERIFICATION.md  profile-implementation-phases.md  profile-prd.md  profile-tdd.md  registration-authentication-prd.md  registration-authentication-tdd.md
docs/features/members/: ALIGNMENT_VERIFICATION.md  UI_SPEC.md  directory-implementation-phases.md  directory-phase-1-tasks.md  directory-prd.md  directory-tdd.md
docs/features/search/: ALIGNMENT_VERIFICATION.md  UI_SPEC.md  search-implementation-phases.md  search-phase-1-tasks.md  search-phase-2-tasks.md  search-prd.md  search-tdd.md
docs/plans/: 2026-02-13-create-phase-plan-skill-design.md  2026-02-13-create-phase-plan-skill.md
docs/prd_summary/PRD/: OVERVIEW_PRD.md
docs/process/: vertical-slicing-enforcement.md
docs/summaries/: classroom-phase-2-summary.md  classroom-phase1-summary.md  community-feed-phase1-summary.md  community-feed-phase2-summary.md  profile-phase2-summary.md  profile-phase3-summary.md  profile-phase4-summary.md  profile-phase5-summary.md  registration-authentication-summary.md  vertical-slice-completion-summary.md
docs/summaries/classroom/: classroom-phase3-frontend-summary.md  classroom-phase3-summary.md  classroom-phase4-summary.md
docs/summaries/community/: community-feed-phase2-implementation-guide.md  community-feed-phase2-summary.md  community-feed-phase3-summary.md  community-feed-phase4-summary.md
docs/summaries/gamification/: leaderboards-phase1-summary.md  leaderboards-phase2-summary.md  points-e2e-tests-summary.md  points-phase-1-summary.md  points-phase-2-summary.md  points-phase-3-summary.md
docs/summaries/members/: directory-phase-1-summary.md  directory-phase2-summary.md  directory-phase3-summary.md
docs/summaries/profile/: profile-phase1-summary.md
docs/summaries/search/: search-phase-1-summary.md  search-phase-2-summary.md  search-phase-3-summary.md
docs/summaries/testing/: e2e-test-stability-fixes.md
docs/testing/: e2e-testing-design.md
docs/testing/e2e/: e2e-test-plan.md  gamification-points-test-plan.md  leaderboards-test-plan.md  search-test-plan.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: Avatar.test.tsx  Avatar.tsx  TabBar.tsx  UserDropdown.tsx  index.ts
frontend/src/lib/: api-client.ts  timeAgo.ts  utils.ts
prompts/: document-work.md  implement-feature.md  write-feature-spec.md  write-technical-design.md
scripts/: README.md  README_SEED.md  check-deployability.sh  clean.sh  deploy-railway.sh  install-prereqs.sh  project-env.sh  run-e2e-tests.sh  seed.sh  seed_db.py  setup-test-db.sh  test.sh  verify-frontend.sh  verify-phase-complete.sh  verify.sh  worktree-create.sh  worktree-status.sh  worktree-teardown.sh
src/: config.py  main.py
src/classroom/: __init__.py
tests/: conftest.py
tests/e2e/: .gitignore  QUICKSTART.md  README.md  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+519 files in other folders)
