[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koulu"
version = "0.1.0"
description = "A Skool.com clone: community platform with feed, classroom, calendar, members, leaderboards"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Koulu Team" }]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Authentication
    "pyjwt>=2.8.0",
    "pwdlib[argon2]>=0.2.0",

    # Email
    "fastapi-mail>=1.4.1",

    # Rate limiting & caching
    "slowapi>=0.1.9",
    "redis>=5.0.1",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Observability
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",

    # Utilities
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "bleach>=6.1.0",  # HTML sanitization (XSS prevention)
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",

    # Linting & Formatting
    "ruff>=0.1.14",
    "mypy>=1.8.0",

    # Type stubs
    "types-redis>=4.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "fastapi_mail.*",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=80"
markers = [
    "identity: Identity domain tests",
    "authentication: Authentication tests",
    "registration: Registration tests",
    "login: Login tests",
    "logout: Logout tests",
    "tokens: Token management tests",
    "password_reset: Password reset tests",
    "profile: Profile tests",
    "rate_limiting: Rate limiting tests",
    "security: Security tests",
    "happy_path: Happy path scenarios",
    "error: Error scenarios",
    "edge_case: Edge case scenarios",
]
filterwarnings = [
    # pytest-bdd with async steps: the step function returns a coroutine which triggers
    # this warning before pytest-asyncio awaits it. This is a known limitation of the
    # pytest-bdd + pytest-asyncio integration, not a bug in our code.
    "ignore:coroutine .* was never awaited:RuntimeWarning:pytest_bdd.scenario",
]

[tool.coverage.run]
source = ["src"]
branch = true
# Exclude infrastructure implementations that are:
# 1. Framework glue (SQLAlchemy CRUD, FastAPI routes)
# 2. External integrations (email, avatar APIs)
# 3. Already tested via BDD integration tests
# Focus coverage on business logic: domain, application, services
omit = [
    # SQLAlchemy repository implementations (CRUD wrappers, tested via BDD)
    "src/*/infrastructure/persistence/*_repository.py",
    # External service integrations (email, avatar APIs)
    "src/*/infrastructure/services/email_service.py",
    "src/*/infrastructure/services/avatar_generator.py",
    # FastAPI interface layer (thin wrappers calling handlers, tested via BDD)
    "src/*/interface/api/*_controller.py",
    "src/*/interface/api/dependencies.py",
    # Shared infrastructure (framework boilerplate: DB setup, event bus)
    "src/shared/infrastructure/database.py",
    "src/shared/infrastructure/event_bus.py",
    # FastAPI app setup (framework boilerplate)
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
